--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                         <p>大学生周末兼职信息服务平台。</p>
                     </div>
                     <div class="col-2 center">
-                        <a class="circle-img" href="https://github.com/beyondouyuan/webOfIrving" target="_blank">
+                        <a class="circle-img" href="http://beyondouyuan.github.io/ilan/" target="_blank">
                             <img src="img/jwebaudio.png" alt="jWebAudio" />
                         </a>
                     </div>
                     <div class="col-4">
-                        <h2><a href="https://github.com/beyondouyuan/webOfIrving" target="_blank">Weilan</a></h2>
+                        <h2><a href="http://beyondouyuan.github.io/ilan/" target="_blank">Weilan</a></h2>
                         <p>我爱篮球论坛，一个只有关于篮球的论坛。</p>
                     </div>
                     <div class="clearboth"></div>
