--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <div class="tag-panel">
                     <div class="tag expert">CSS</div>
                     <div class="tag familiar">SCSS</div>
+                    <div class="tag familiar">LESS</div>
                 </div>
                 <div class="tag-panel">
                     <div class="tag expert">JavaScript</div>
@@ -73,6 +74,7 @@
                 </div>
                 <div class="tag-panel">
                     <div class="tag familiar">HTML5</div>
+                    <div class="tag familiar">Ajax</div>
                 </div>
                 <div class="tag-panel">
                     <div class="tag expert">网页设计</div>
