--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                     <div class="tag expert">JavaScript</div>
                     <div class="tag expert">jQuery</div>
                     <div class="tag expert">Bootstrap</div>
+                    <div class="tag expert">Angularjs</div>
                 </div>
                 <div class="tag-panel">
                     <div class="tag familiar">HTML5</div>
